added searchbox to find formats easily

--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
 </div>
 
 <div id="fileTreeCont">
+    <div class="fileTreeSearchBox">
+        <input type="text" id="fileTreeSearch" placeholder="Search formats..." />
+    </div>
     <div id="fileTree" class="fileTree">
 
     </div>
